force-app/main/default/objects/GDPR_Data_Export_Event__e/GDPR_Data_Export_Event__e.object-meta.xml
<CustomObject>
    <description>GDPR Article 20 - Immutable audit trail for data export/portability events</description>
    <label>GDPR Data Export Event</label>
    <pluralLabel>GDPR Data Export Events</pluralLabel>
</CustomObject>