force-app/main/default/objects/GDPR_Data_Export_Event__e/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Email of the data subject</description>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>