force-app/main/default/objects/GDPR_Data_Export_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>ID of the data subject</description>
    <label>Contact ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>