force-app/main/default/objects/GDPR_Data_Export_Event__e/fields/Export_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_Date__c</fullName>
    <description>Date and time of data export</description>
    <label>Export Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>