force-app/main/default/objects/GDPR_Data_Export_Event__e/fields/Exported_By__c.field-meta.xml
<CustomField>
    <fullName>Exported_By__c</fullName>
    <description>User who performed the export</description>
    <label>Exported By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>